Add profile for JDK 11+ and add open modules